@page RN40 Release notes for GCG 4.0
@section RN400 GCG 4.0.0
*************************

New features:
-------------

- Generic approach to handle cuts and branching constraints in the master problem with no couterpart in the original problem
- Created a pricing variable type for variables not corresponding to any original variable, inferred by mastercuts


New/modified API functions:
---------------------------

- Added function 'GCGcreateInferredPricingVar'
- Added function 'GCGvarIsInferredPricing'
- Added function 'GCGmastercutIsActive'
- Added function 'GCGrelaxBranchNewCol'
- Added function 'GCGrelaxBranchUpdateDual'
- Added function 'GCGrelaxBranchUpdateDualWithGCGBranchrule'
- Added function 'GCGrelaxBranchGetMasterCut'
- Added function 'GCGrelaxBranchGetAllActiveMasterCuts'
- Added callback 'GCG_DECL_BRANCHNEWCOL' to 'GCG_BRANCHRULE'
- Added callback 'GCG_DECL_BRANCHUPDATEDUAL' to 'GCG_BRANCHRULE'
- Added callback 'GCG_DECL_BRANCHGETMASTERCUT' to 'GCG_BRANCHRULE'
- Added parameter 'GCG_DECL_BRANCHNEWCOL((*branchnewcol))' to 'GCGrelaxIncludeBranchrule'
- Added parameter 'GCG_DECL_BRANCHUPDATEDUAL((*branchupdatedual))' to 'GCGrelaxIncludeBranchrule'
- Added parameter 'GCG_DECL_BRANCHGETMASTERCUT((*branchgetmastercut))' to 'GCGrelaxIncludeBranchrule'


Renamed API functions:
---------------------------

- Moved function 'SCIPincludeSepaMaster' to 'SCIPincludeSepaOriginal'
- Moved function 'GCGsepaGetOrigcuts' to 'GCGsepaGetOriginalSepaOrigcuts'
- Moved function 'GCGsepaGetNCuts' to 'GCGsepaGetNOriginalSepaCuts'
- Moved function 'GCGsepaGetMastercuts' to 'GCGsepaGetOriginalSepaMastercuts'
- Moved function 'GCGsepaAddMastercuts' to 'GCGsepaAddOriginalSepaCuts'
- Moved function 'GCGsepaOrigcutExists' to 'GCGsepaOriginalSepaOrigcutExists'

New/changed parameters:
-----------------------

- Moved parameter 'sepa/master/enable' to 'sepa/original/enable'
- Moved parameter 'sepa/master/paramsetting' to 'sepa/original/paramsetting'

Added structures and defines: