@@ -7,6 +7,7 @@ New features:
 
 - Generic approach to handle cuts and branching constraints in the master problem with no couterpart in the original problem
 - Created a pricing variable type for variables not corresponding to any original variable, inferred by mastercuts
+- Automatic Mastervariable Synchronization across the entire B&B-Tree through history-tracking
 
 
 New/modified API functions:
@@ -50,6 +51,8 @@ Added structures and defines:
 - Added struct 'GCG_INFERREDPRICINGVARDATA'
 - Added struct 'GCG_PRICINGMODIFICATION'
 - Added struct 'GCG_MASTERCUTDATA'
+- Added struct 'GCG_VARHISTORY'
+- ADDED struct 'GCG_VARHISTORYBUFFER'
 - Added type 'GCG_VARTYPE_INFERREDPRICING'
 
 Command line interface
